--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
+    "jquery": "^3.1.0",
     "react-cli": "^0.3.1"
   }
 }
